Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1338

SSL not handling VC_EVENT_ERROR event

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.2.0
    • 3.3.0
    • SSL
    • None

    Description

      Now that HttpSM isn't used and SSLNextProtocolAccept, SSLNextProtocolAccept doesn't handle the event VC_EVENT_ERROR.

      This leaves the connection in an odd state.

      Attachments

        1. bcall-ts1338-v1.patch
          1 kB
          Bryan Call

        Issue Links

          Activity

            People

              bcall Bryan Call
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: