TS-1338 SSL not handling some events properly