iocore/net/SSLNextProtocolAccept.cc
@@ -46,7 +46,9 @@ ssl_netvc_cast(int event, void * edata)
   case NET_EVENT_ACCEPT:
     ptr.vc = static_cast<NetVConnection *>(edata);
     return dynamic_cast<SSLNetVConnection *>(ptr.vc);
+  case VC_EVENT_INACTIVITY_TIMEOUT:
   case VC_EVENT_READ_COMPLETE:
+  case VC_EVENT_ERROR:
     ptr.vio = static_cast<VIO *>(edata);
     return dynamic_cast<SSLNetVConnection *>(ptr.vio->vc_server);
   default:
@@ -60,8 +62,7 @@ SSLNextProtocolAccept::mainEvent(int event, void * edata)
   SSLNetVConnection * netvc = ssl_netvc_cast(event, edata);
   Continuation * plugin;
 
-  Debug("ssl",
-      "[SSLNextProtocolAccept:mainEvent] event %d netvc %p", event, netvc);
+  Debug("ssl", "[SSLNextProtocolAccept:mainEvent] event %d netvc %p", event, netvc);
 
   MUTEX_LOCK(lock, this->mutex, this_ethread());
 
@@ -88,6 +89,9 @@ SSLNextProtocolAccept::mainEvent(int event, void * edata)
       netvc->do_io(VIO::CLOSE);
     }
     return EVENT_CONT;
+  case VC_EVENT_INACTIVITY_TIMEOUT:
+  case VC_EVENT_ERROR:
+    netvc->do_io(VIO::CLOSE);
   default:
     return EVENT_DONE;
   }
